# synchall

./: .gitignore  README.md  pyproject.toml
shared_player/: Serve.py  Sync.py  types.py
shared_player/discovery/: integrated.py  win.py  yn.py
shared_player/downloads/: __init__.py  yn.py
shared_player/playback/: convert.py  player.py  stream.py
