[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "dotenv>=0.9.9",
    "numpy>=2.4.0",
    "pyaudio>=0.2.14",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "websockets>=15.0.1",
    "winrt-runtime>=3.2.1",
    "winrt-sdk>=3.2.1",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-foundation-collections>=3.2.1",
    "winrt-windows-media>=3.2.1",
    "winrt-windows-media-control>=3.2.1",
    "yandex-music>=2.2.0",
    "yandex-music-downloader",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "more-itertools>=10.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
sync = "shared_player.Sync:main"

[tool.ruff]
target-version = 'py312'
extend-include = ["*.ipynb"]
exclude = [
    '.git',
    '.ruff_cache',
    '.venv',
    'venv',
]

# Configure single quotes
[tool.ruff.format]
quote-style = 'double'

[tool.uv.sources]
yandex-music-downloader = { git = "https://github.com/llistochek/yandex-music-downloader.git", rev = "v3.5.4" }
